--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.6.3+1
+version: 1.6.4+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: any
   flutter_localizations:
     sdk: flutter
+  flutter_rounded_date_picker: 1.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
