--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_rounded_date_picker: 1.0.5
+  flutter_local_notifications: ^3.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
