Added timepicker, added backend for daily notifications, not connected yet

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.manual_contact_tracing">
 
     <application
+        android:name="io.flutter.app.FlutterApplication"
         android:label="Manual Contact Tracing"
         android:icon="@mipmap/ic_launcher">
         <activity
