--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
     sdk: flutter
   flutter_rounded_date_picker: 1.0.5
   flutter_local_notifications: ^3.0.2
+  fluttertoast: ^7.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
