--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.1
-
+version: 2.1.0
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
@@ -27,7 +26,6 @@ dependencies:
   shared_preferences: any
   flutter_localizations:
     sdk: flutter
-  flutter_rounded_date_picker: 1.0.5
   flutter_local_notifications: ^3.0.2
   fluttertoast: ^7.1.6
 
@@ -52,7 +50,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - google_fonts/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -67,10 +66,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+     - family: Product Sans
+       fonts:
+         - asset: google_fonts/Product Sans Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
